--- a/.travis.yml
+++ b/.travis.yml
@@ -19,16 +19,19 @@ cache:
     # Android build cache (see http://tools.android.com/tech-docs/build-cache)
     - $HOME/.android/build-cache
 
-android:
-  components:
-    - tools
-    - build-tools-25.0.3
-    - platform-tools
-    - extra-android-m2repository
-    - extra-google-m2repository
-    - extra-google-android-support
-    - android-25
-    - sys-img-armeabi-v7a-android-25
+install:
+  # Download and unzip the Android SDK tools (if not already there thanks to the cache mechanism)
+  - if test ! -e $HOME/android-sdk-dl/tools_r25.2.5-linux.zip ; then curl https://dl.google.com/android/repository/tools_r25.2.5-linux.zip > $HOME/android-sdk-dl/tools_r25.2.5-linux.zip ; fi
+  - unzip -n $HOME/android-sdk-dl/tools_r25.2.5-linux.zip -d $HOME/android-sdk
+
+  # Install or update Android SDK components (will not do anything if already up to date thanks to the cache mechanism)
+  - echo y | $HOME/android-sdk/tools/bin/sdkmanager 'tools'
+  - echo y | $HOME/android-sdk/tools/bin/sdkmanager 'platform-tools'
+  - echo y | $HOME/android-sdk/tools/bin/sdkmanager 'build-tools;25.0.3'
+  - echo y | $HOME/android-sdk/tools/bin/sdkmanager 'platforms;android-25'
+  - echo y | $HOME/android-sdk/tools/bin/sdkmanager 'extras;android;m2repository'
+  - echo y | $HOME/android-sdk/tools/bin/sdkmanager 'extras;google;google_play_services'
+  - echo y | $HOME/android-sdk/tools/bin/sdkmanager 'extras;google;m2repository'
 
 env:
   - ANDROID_HOME=$HOME/android-sdk
