--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ licenses:
   - 'google-gdk-license-.+'
 
 before_script:
-  - echo no | android create avd --force -n test -t android-25 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-25 --abi google_apis/armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
