--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,17 @@ cache:
     # Android build cache (see http://tools.android.com/tech-docs/build-cache)
     - $HOME/.android/build-cache
 
+env:
+  global:
+      - API=25 # Android API level 25 by default
+      - TAG=google_apis # Google APIs by default, alternatively use default
+      - ABI=armeabi-v7a # ARM ABI v7a by default
+      - ANDROID_HOME=$HOME/android-sdk
+
+before_install:
+  - export EMULATOR="system-images;android-${API};${TAG};${ABI}" # Used to install/create emulator
+  - echo 'count=0' > /home/travis/.android/repositories.cfg # Avoid warning
+
 install:
   # Download and unzip the Android SDK tools (if not already there thanks to the cache mechanism)
   - if test ! -e $HOME/android-sdk-dl/tools_r25.2.5-linux.zip ; then curl https://dl.google.com/android/repository/tools_r25.2.5-linux.zip > $HOME/android-sdk-dl/tools_r25.2.5-linux.zip ; fi
@@ -33,9 +44,6 @@ install:
   - echo y | $HOME/android-sdk/tools/bin/sdkmanager 'extras;google;google_play_services'
   - echo y | $HOME/android-sdk/tools/bin/sdkmanager 'extras;google;m2repository'
 
-env:
-  - ANDROID_HOME=$HOME/android-sdk
-
 branches:
   only:
   - master
@@ -48,7 +56,7 @@ licenses:
   - 'google-gdk-license-.+'
 
 before_script:
-  - echo no | android create avd --force -n test -t android-25 --abi google_apis/armeabi-v7a
+  - echo no | avdmanager create avd -n acib -k "$EMULATOR" -f --abi "$ABI" --tag "$TAG"
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
