--- a/.travis.yml
+++ b/.travis.yml
@@ -56,7 +56,7 @@ licenses:
   - 'google-gdk-license-.+'
 
 before_script:
-  - echo no | avdmanager create avd -n acib -k "$EMULATOR" -f --abi "$ABI" --tag "$TAG"
+  - echo no | android create avd -n test -k "$EMULATOR" -f --abi "$ABI" --tag "$TAG"
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
