--- a/.travis.yml
+++ b/.travis.yml
@@ -92,15 +92,13 @@ install:
   - echo no | avdmanager create avd -n acib -k "$EMULATOR" -f --abi "$ABI" --tag "$TAG"
   - emulator -avd acib -engine classic -no-window -camera-back none -camera-front none -selinux permissive -verbose -qemu -m 512 &
   # Start adbd, wait for device connected and show android serial to avoid heavy tasks in parallel
-  - adb wait-for-device get-serialno
+  - travis-wait adb wait-for-device get-serialno
   # Show version and download Gradle Wrapper if it's not already cached
   - ./gradlew --version
   # Clean project and download missing dependencies and components
   - ./gradlew clean
   # Check components status
   - sdkmanager --list || true
-  # Run all checks
-  - ./gradlew check -PdisablePreDex
 
 
 branches:
