--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ env:
     - ABI=armeabi-v7a # ARM ABI v7a by default
     - QEMU_AUDIO_DRV=none # Disable emulator audio to avoid warning
     - GRADLE_USER_HOME=$HOME/.gradle # Change location for Gradle Wrapper and cache
-    - ANDROID_HOME=$HOME/android-sdk
+    - ANDROID_HOME=/usr/local/android-sdk-24.0.2
     - TOOLS=${ANDROID_HOME}/tools # PATH order matters, exists more than one emulator script
     - PATH=${ANDROID_HOME}:${ANDROID_HOME}/emulator:${TOOLS}:${TOOLS}/bin:${ANDROID_HOME}/platform-tools:${PATH}
     - ADB_INSTALL_TIMEOUT=20 # minutes (2 minutes by default)
@@ -58,9 +58,6 @@ before_install:
   - echo 'count=0' > /home/travis/.android/repositories.cfg # Avoid warning
 
 install:
-  # Download and unzip the Android SDK tools (if not already there thanks to the cache mechanism)
-  - if test ! -e $HOME/android-sdk-dl/sdk-tools-linux-3859397.zip ; then curl https://dl.google.com/android/repository/sdk-tools-linux-3859397.zip > $HOME/android-sdk-dl/sdk-tools-linux-3859397.zip ; fi
-  - unzip -n $HOME/android-sdk-dl/sdk-tools-linux-3859397.zip -d $HOME/android-sdk
   # List and delete unnecessary components to free space
   - sdkmanager --list || true
   - sdkmanager --uninstall "system-images;android-15;default;armeabi-v7a"
