--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: android
 jdk: oraclejdk8
+sudo: required # false for Container-Based Infrastructure, required for Sudo-enabled Infrastructure
 
 before_cache:
   # Do not cache a few Gradle files/directories (see https://docs.travis-ci.com/user/languages/java/#Caching)
@@ -24,12 +25,14 @@ cache:
 
 android:
   components:
+    - tools # Update preinstalled tools from revision 24.0.2 to 24.4.1
     - build-tools-25.0.3 # Match build-tools version used in build.gradle
     - platform-tools # Update platform-tools to revision 25.0.3+
     - tools # Update tools from revision 24.4.1 to 25.2.5
 
 env:
   global:
+    - DIR=gmlrva # Project directory
     - API=25 # Android API level 25 by default
     - TAG=google_apis # Google APIs by default, alternatively use default
     - ABI=armeabi-v7a # ARM ABI v7a by default
@@ -86,9 +89,16 @@ install:
   - echo yes | sdkmanager "$EMULATOR" # Install emulator system image
   # Create and start emulator
   - echo no | avdmanager create avd -n acib -k "$EMULATOR" -f --abi "$ABI" --tag "$TAG"
-  - emulator -avd acib -engine classic -no-window -camera-back none -camera-front none -selinux permissive -verbose -qemu -m 512 &
+  - emulator -avd acib -engine classic -no-window -camera-back none -camera-front none -selinux permissive -verbose -qemu -m
+  512 &
   # Start adbd, wait for device connected and show android serial to avoid heavy tasks in parallel
   - adb wait-for-device get-serialno
+  # Show version and download Gradle Wrapper if it's not already cached
+  - cd ${TRAVIS_BUILD_DIR}/${DIR} && ./gradlew --version
+  # Clean project and download missing dependencies and components
+  - cd ${TRAVIS_BUILD_DIR}/${DIR} && ./gradlew clean build
+  # Check components status
+  - sdkmanager --list || true
 
 branches:
   only:
@@ -107,6 +117,7 @@ before_script:
     - adb shell settings put global window_animation_scale 0 &
     - adb shell settings put global transition_animation_scale 0 &
     - adb shell settings put global animator_duration_scale 0 &
+    - sleep 30
     - adb shell input keyevent 82 &
     - |
         if [ "$TRAVIS_PULL_REQUEST" != "false" ] && [ "$TRAVIS_BRANCH" = "master" ]; then
