[Support] Update to travis.yml file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,6 @@ android:
 
 env:
   global:
-    - DIR=gmlrva # Project directory
     - API=25 # Android API level 25 by default
     - TAG=google_apis # Google APIs by default, alternatively use default
     - ABI=armeabi-v7a # ARM ABI v7a by default
@@ -93,9 +92,9 @@ install:
   # Start adbd, wait for device connected and show android serial to avoid heavy tasks in parallel
   - adb wait-for-device get-serialno
   # Show version and download Gradle Wrapper if it's not already cached
-  - cd ${TRAVIS_BUILD_DIR}/${DIR} && ./gradlew --version
+  - cd ${TRAVIS_BUILD_DIR} && ./gradlew --version
   # Clean project and download missing dependencies and components
-  - cd ${TRAVIS_BUILD_DIR}/${DIR} && ./gradlew clean build
+  - cd ${TRAVIS_BUILD_DIR} && ./gradlew clean build
   # Check components status
   - sdkmanager --list || true
 
