--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,9 @@ android:
     - tools
     - platform-tools
     - build-tools-25.0.3
+    - android-22
     - android-25
+    - sys-img-armeabi-v7a-android-22
     - extra-android-m2repository
 
 licenses:
@@ -23,7 +25,7 @@ licenses:
 
 before_script:
   - android list targets
-  - echo no | android create avd --force -n test -t android-18 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
