--- a/gmlrva-lib/build.gradle
+++ b/gmlrva-lib/build.gradle
@@ -22,7 +22,7 @@ android {
             debuggable true
             zipAlignEnabled true
             minifyEnabled true
-            shrinkResources true
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'),
                     "$project.rootDir/tools/rules-proguard-debug.pro"
         }
@@ -44,6 +44,7 @@ android {
         exclude 'META-INF/LICENSE'
         exclude 'META-INF/NOTICE'
     }
+
 }
 
 dependencies {
