--- a/gmlrva-lib/src/main/AndroidManifest.xml
+++ b/gmlrva-lib/src/main/AndroidManifest.xml
@@ -1,12 +1,2 @@
 <manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="pt.simdea.gmlrva.lib">
-
-    <application
-        android:allowBackup="true"
-        android:label="@string/gmlrva_app_name"
-        android:supportsRtl="true"
-        tools:replace="android:label"/>
-
-</manifest>
+    package="pt.simdea.gmlrva.lib"/>
