--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,11 @@ buildscript {
 
     repositories {
         jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'pt.simdea.verifier:verifier:3.5.8'
         classpath 'com.novoda:bintray-release:0.5.0'
 
@@ -21,6 +22,7 @@ allprojects {
 
     repositories {
         jcenter()
+        google()
     }
 
 }
