[Support] Update to the travis.yml file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-25.0.2
+    - build-tools-26.0.2
     - android-22
     - android-26
     - sys-img-armeabi-v7a-android-22
@@ -24,6 +24,7 @@ licenses:
   - 'google-gdk-license-.+'
 
 before_script:
+  - android update sdk --no-ui --all --filter build-tools-26.0.2,android-26,extra-android-m2repository
   - android list targets
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
