--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ licenses:
 before_script:
   - android update sdk --no-ui --all --filter build-tools-26.0.2,android-26,extra-android-m2repository
   - echo y
+  - echo y
   - android list targets
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
