--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ android:
     - android-22
     - android-26
     - sys-img-armeabi-v7a-android-22
+    - extra-google-m2repository
     - extra-android-m2repository
 
 licenses:
@@ -24,9 +25,8 @@ licenses:
   - 'google-gdk-license-.+'
 
 before_script:
-  - android update sdk --no-ui --all --filter build-tools-26.0.2,android-26,extra-android-m2repository
-  - yes | sudo sdkmanager --licenses
   - android list targets
+  - yes | sdkmanager --licenses
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
