--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ licenses:
 
 before_script:
   - android list targets
-  - yes | ls -la $ANDROID_HOME/tools/bin/
+  - yes | $ANDROID_HOME/tools/bin/sdkmanager --help
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
