--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ licenses:
 before_script:
   - android list targets
   - yes | $ANDROID_HOME/tools/bin/sdkmanager --update
-  - echo no | $ANDROID_HOME/tools/bin/avdmanager create avd --force -n test -t android-22 --abi armeabi-v7a
+  - echo no | $ANDROID_HOME/tools/bin/avdmanager create avd --force -n test -t 1 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
