--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,11 @@ android:
   components:
     - tools
     - platform-tools
-    - build-tools-25.0.3
+    - build-tools-26.0.2
     - android-22
-    - android-25
+    - android-26
     - sys-img-armeabi-v7a-android-22
+    - extra-google-m2repository
     - extra-android-m2repository
 
 licenses:
@@ -25,6 +26,7 @@ licenses:
 
 before_script:
   - android list targets
+  - yes | sdkmanager --licenses
   - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
