--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ licenses:
 before_script:
   - android list targets
   - yes | $ANDROID_HOME/tools/bin/sdkmanager --update
-  - echo yes | $ANDROID_HOME/tools/bin/avdmanager create avd --force -n test -k "system-images;android-22;default;armeabi-v7a" --abi armeabi-v7a
+  - no | $ANDROID_HOME/tools/bin/avdmanager create avd --force -n test -k "system-images;android-22;default;armeabi-v7a" --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
