[Support] Update to the travis.yml file.

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ licenses:
 
 before_script:
   - android list targets
-  - yes | $ANDROID_HOME/tools/bin/sdkmanager --update
-  - no | $ANDROID_HOME/tools/bin/avdmanager create avd --force -n test -k "system-images;android-22;default;armeabi-v7a" --abi armeabi-v7a
+  - yes | ls -la $ANDROID_HOME/tools/bin/
+  - echo no | android create avd --force -n test -t android-22 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
