--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext.kotlin_version = '1.2.60'
 
     repositories {
         jcenter()
@@ -8,9 +9,10 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0'
-        classpath 'pt.simdea.verifier:verifier:3.5.8'
+        classpath 'com.android.tools.build:gradle:3.3.0-alpha04'
+        classpath 'pt.simdea.verifier:verifier:3.6.0'
         classpath 'com.novoda:bintray-release:0.5.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
