--- a/gradle.properties
+++ b/gradle.properties
@@ -19,9 +19,9 @@ org.gradle.jvmargs=-Xmx1536m
 ### GENERAL PROPERTIES ###
 APP_ID=pt.simdea.gmlrva.sample
 MIN_SDK_VERSION=19
-TARGET_SDK_VERSION=27
-COMPILE_SDK_VERSION=27
-BUILD_TOOLS_VERSION=27.0.3
+TARGET_SDK_VERSION=28
+COMPILE_SDK_VERSION=28
+BUILD_TOOLS_VERSION=28.0.1
 RESOURCE_PREFIX=gmlrva
 
 ### BUILD PROPERTIES ###
@@ -29,5 +29,7 @@ DEV_APP_ID_SUFFIX=.dev
 DEV_VERSION_NAME_SUFFIX=-DEV
 
 ### LIBRARY VERSION PROPERTIES ###
-supportLibraryVersion=27.1.1
+supportLibraryVersion=1.0.0-beta01
 lombokVersion=1.16.18
+android.useAndroidX=true
+android.enableJetifier=true
