--- a/gradle.properties
+++ b/gradle.properties
@@ -30,6 +30,7 @@ DEV_VERSION_NAME_SUFFIX=-DEV
 
 ### LIBRARY VERSION PROPERTIES ###
 supportLibraryVersion=1.0.0-beta01
+pagingVersion=1.0.0
 lombokVersion=1.16.18
 android.useAndroidX=true
 android.enableJetifier=true
